--- a/index.html
+++ b/index.html
@@ -41,5 +41,97 @@
             <img src="img/c3.png" alt="">
         </article>
     </section>
+    <section>
+        <div>
+            <img class="rucki" src="img/d7.png" alt="">
+        </div>
+        <article class="art1">
+            <img src="img/c6.png" alt="">
+        </article>
+        <article class="art2">
+            <img src="img/h13.png" alt="">
+        </article>
+        <article class="art3">
+            <img src="img/h8.png" alt="">
+        </article>
+        <article class="art4">
+            <img src="img/h2.png" alt="">
+        </article>
+        <article class="art5">
+            <img src="img/d5.png" alt="">
+        </article>
+        <article class="art6">
+            <img src="img/c5.png" alt="">
+        </article>
+    </section>
+    <section>
+        <div>
+            <img class="rucki" src="img/h6.png" alt="">
+        </div>
+        <article class="art1">
+            <img src="img/u7.png" alt="">
+        </article>
+        <article class="art2">
+            <img src="img/d4.png" alt="">
+        </article>
+        <article class="art3">
+            <img src="img/u11.png" alt="">
+        </article>
+        <article class="art4">
+            <img src="img/h9.png" alt="">
+        </article>
+        <article class="art5">
+            <img src="img/p2.png" alt="">
+        </article>
+        <article class="art6">
+            <img src="img/h4.png" alt="">
+        </article>
+    </section>
+    <section>
+        <div>
+            <img class="rucki" src="img/c22.png" alt="">
+        </div>
+        <article class="art1">
+            <img src="img/c1.png" alt="">
+        </article>
+        <article class="art2">
+            <img src="img/u12.png" alt="">
+        </article>
+        <article class="art3">
+            <img src="img/p3.png" alt="">
+        </article>
+        <article class="art4">
+            <img src="img/life-15.png" alt="">
+        </article>
+        <article class="art5">
+            <img src="img/life-17.png" alt="">
+        </article>
+        <article class="art6">
+            <img src="img/life-16.png" alt="">
+        </article>
+    </section>
+    <section>
+        <div>
+            <img class="rucki" src="img/u8.png" alt="">
+        </div>
+        <article class="art1">
+            <img src="img/home-8.png" alt="">
+        </article>
+        <article class="art2">
+            <img src="img/home-10.png" alt="">
+        </article>
+        <article class="art3">
+            <img src="img/home-9.png" alt="">
+        </article>
+        <article class="art4">
+            <img src="" alt="">
+        </article>
+        <article class="art5">
+            <img src="" alt="">
+        </article>
+        <article class="art6">
+            <img src="" alt="">
+        </article>
+    </section>
 </body>
 </html>
