--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <Header>
-        <nav>
+            <h1><a href="#">THE DESIGN SHOP</a></h1>
+        <nav class="main">
             <ul>
-                <li><a href="#">THE DESIGN SHOP</a></li>
                 <li><a href="#">Weekly Recommendations</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">TDB</a></li>
@@ -20,118 +20,230 @@
     </Header>
     <section>
         <div>
-            <img class="rucki" src="img/1.png" alt="">
+            <a href="https://amzn.to/32MmHgL"><img class="rucki" src="img/1.png" alt=""></a>
+            <span class="product">Kanken Art Laptop 15" Special Edition Backpack</span>
+            <span class="name">Fjallraven</span>
+            <span class="price">$119.00</span>
         </div>
         <article class="art1">
-            <img src="img/d2.png" alt="">
+            <a href="https://amzn.to/2WX7vtD"><img src="img/d2.png" alt=""></a>
+            <span class="product">Swing Arm Wood Desk Lamp</span>
+            <span class="name">Tomons</span>
+            <span class="price">$36.00</span>
         </article>
         <article class="art2">
-            <img src="img/u6.png" alt="">
+            <a href="https://amzn.to/2I3WvXM"><img src="img/u6.png" alt=""></a>
+            <span class="product">Hajo Backpack</span>
+            <span class="name">Ucon Acrobatics</span>
+            <span class="price">$89.00</span>
         </article>
         <article class="art3">
-            <img src="img/u10.png" alt="">
+            <a href="https://amzn.to/2YX3043"><img src="img/u10.png" alt=""></a>
+            <span class="product">Zed Bamboo Longboard</span>
+            <span class="name">Retrospec</span>
+            <span class="price">$60.00</span>
         </article>
         <article class="art4">
-            <img src="img/u9.png" alt="">
+            <a href="https://amzn.to/2KfP3ee"><img src="img/u9.png" alt=""></a>
+            <span class="product">Electric Pour-Over Kettle</span>
+            <span class="name">Fellow</span>
+            <span class="price">$149.00</span>
         </article>
         <article class="art5">
-            <img src="img/h17.png" alt="">
+            <a href="https://amzn.to/2FYB3zT"><img src="img/h17.png" alt=""></a>
+            <span class="product">Woodie Vintage Car</span>
+            <span class="name">Candylab Toys</span>
+            <span class="price">$35.00</span>
         </article>
         <article class="art6">
-            <img src="img/c3.png" alt="">
+            <a href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991"><img src="img/c3.png" alt=""></a>
+            <span class="product">Logo Modernism</span>
+            <span class="name">Taschen</span>
+            <span class="price">$60.00</span>
         </article>
     </section>
     <section>
         <div>
-            <img class="rucki" src="img/d7.png" alt="">
+            <a href="https://amzn.to/2YQLnCV"><img class="rucki" src="img/d7.png" alt=""></a>
+            <span class="product">Dieter Rams: As Little Design as Possible</span>
+            <span class="name">Sophie Lovell</span>
+            <span class="price">$150.00</span>
         </div>
         <article class="art1">
-            <img src="img/c6.png" alt="">
+            <a href="https://amzn.to/2I3lbQ7"><img src="img/c6.png" alt=""></a>
+            <span class="product">The Eye</span>
+            <span class="name">Nathan Williams</span>
+            <span class="price">$28.00</span>
         </article>
         <article class="art2">
-            <img src="img/h13.png" alt="">
+            <a href="https://amzn.to/2IifSvA"><img src="img/h13.png" alt=""></a>
+            <span class="product">Gather Desk Organizer</span>
+            <span class="name">Ugmonk</span>
+            <span class="price">$149.00</span>
         </article>
         <article class="art3">
-            <img src="img/h8.png" alt="">
+            <a href="https://amzn.to/2G84CiT"><img src="img/h8.png" alt=""></a>
+            <span class="product">Dipped Canteen</span>
+            <span class="name">Corkcicle.</span>
+            <span class="price">$28.00</span>
         </article>
         <article class="art4">
-            <img src="img/h2.png" alt="">
+            <a href="https://amzn.to/2YWPz3N"><img src="img/h2.png" alt=""></a>
+            <span class="product">Sayl Office Chair White</span>
+            <span class="name">Herman Miller</span>
+            <span class="price">$599.00</span>
         </article>
         <article class="art5">
-            <img src="img/d5.png" alt="">
+            <a href="https://amzn.to/2KhwTsz"><img src="img/d5.png" alt=""></a>
+            <span class="product">Three Cherry Wood Notebook</span>
+            <span class="name">Field Notes</span>
+            <span class="price">$13.00</span>
         </article>
         <article class="art6">
-            <img src="img/c5.png" alt="">
+            <a href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991"><img src="img/c5.png" alt=""></a>
+            <span class="product">From Japan</span>
+            <span class="name">Counter Print</span>
+            <span class="price">$16.00</span>
         </article>
     </section>
     <section>
         <div>
-            <img class="rucki" src="img/h6.png" alt="">
+            <a href="http://www.grupaproducts.com/arigato/"><img class="rucki" src="img/h6.png" alt=""></a>
+            <span class="product">Arigato Desk Lamp</span>
+            <span class="name">Grupa</span>
+            <span class="price">$380.00</span>
         </div>
         <article class="art1">
-            <img src="img/u7.png" alt="">
+            <a href="https://amzn.to/2CZiPxO"><img src="img/u7.png" alt=""></a>
+            <span class="product">Winston Regal Watch</span>
+            <span class="name">Komono</span>
+            <span class="price">$58.00</span>
         </article>
         <article class="art2">
-            <img src="img/d4.png" alt="">
+            <a href="https://heyshop.es/collections/home/products/h-hey"><img src="img/d4.png" alt=""></a>
+            <span class="product">Letter H Poster</span>
+            <span class="name">Hey Studio</span>
+            <span class="price">$45.00</span>
         </article>
         <article class="art3">
-            <img src="img/u11.png" alt="">
+            <a href="https://amzn.to/2UGLHEQ"><img src="img/u11.png" alt=""></a>
+            <span class="product">Coffee Can</span>
+            <span class="name">Blue Bottle Company</span>
+            <span class="price">$11.00</span>
         </article>
         <article class="art4">
-            <img src="img/h9.png" alt="">
+            <a href="https://amzn.to/2UFjEWp"><img src="img/h9.png" alt=""></a>
+            <span class="product">Beoplay H4</span>
+            <span class="name">Bang & Olufsen</span>
+            <span class="price">$160.00</span>
         </article>
         <article class="art5">
-            <img src="img/p2.png" alt="">
+            <a href="https://amzn.to/2OTHEQg"><img src="img/p2.png" alt=""></a>
+            <span class="product">Make It Now</span>
+            <span class="name">Anthony Burrill</span>
+            <span class="price">$22.00</span>
         </article>
         <article class="art6">
-            <img src="img/h4.png" alt="">
+            <a href="https://amzn.to/2UFHfGt"><img src="img/h4.png" alt=""></a>
+            <span class="product">Black Side Chair</span>
+            <span class="name">Eames Style</span>
+            <span class="price">$54.00</span>
         </article>
     </section>
     <section>
         <div>
-            <img class="rucki" src="img/c22.png" alt="">
+            <a href="https://amzn.to/2Ij1IKA"><img class="rucki" src="img/c22.png" alt=""></a>
+            <span class="product">Min: The New Simplicity in Graphic Design</span>
+            <span class="name">Thames & Hudson</span>
+            <span class="price">$28.00</span>
         </div>
         <article class="art1">
-            <img src="img/c1.png" alt="">
+            <a href="https://amzn.to/2UxtLww"><img src="img/c1.png" alt=""></a>
+            <span class="product">Grid systems in graphic design</span>
+            <span class="name">Josef Müller-Brockmann</span>
+            <span class="price">$42.00</span>
         </article>
         <article class="art2">
-            <img src="img/u12.png" alt="">
+            <a href="https://amzn.to/2I5vxiq"><img src="img/u12.png" alt=""></a>
+            <span class="product">Card Wallet</span>
+            <span class="name">Herschel</span>
+            <span class="price">$15.00</span>
         </article>
         <article class="art3">
-            <img src="img/p3.png" alt="">
+            <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print"><img src="img/p3.png" alt=""></a>
+            <span class="product">Classic Advice Print Black</span>
+            <span class="name">Good Fucking Design Advice</span>
+            <span class="price">$30.00</span>
         </article>
         <article class="art4">
-            <img src="img/life-15.png" alt="">
+            <a href="https://amzn.to/2D3yZWX"><img src="img/life-15.png" alt=""></a>
+            <span class="product">Magic Mouse 2</span>
+            <span class="name">Apple</span>
+            <span class="price">$92.00</span>
         </article>
         <article class="art5">
-            <img src="img/life-17.png" alt="">
+            <a href="https://amzn.to/2WTbsPL"><img src="img/life-17.png" alt=""></a>
+            <span class="product">Travel Tumbler</span>
+            <span class="name">Kinto</span>
+            <span class="price">$34.00</span>
         </article>
         <article class="art6">
-            <img src="img/life-16.png" alt="">
+            <a href="https://amzn.to/2GbCf4A"><img src="img/life-16.png" alt=""></a>
+            <span class="product">Magic Keyboard</span>
+            <span class="name">Apple</span>
+            <span class="price">$139.00</span>
         </article>
     </section>
-    <section>
+    <section class="end">
         <div>
-            <img class="rucki" src="img/u8.png" alt="">
+            <a href="https://amzn.to/2WMJbdy"><img class="rucki" src="img/u8.png" alt=""></a>
+            <span class="product">Bottle Grinder</span>
+            <span class="name">Menu</span>
+            <span class="price">$75.00</span>
         </div>
-        <article class="art1">
-            <img src="img/home-8.png" alt="">
+        <article>
+            <a href="https://amzn.to/2JLtxvk"><img src="img/home-8.png" alt=""></a>
+            <span class="product">Geo Thermos</span>
+            <span class="name">Normann Copenhagen</span>
+            <span class="price">$62.00</span>
         </article>
-        <article class="art2">
-            <img src="img/home-10.png" alt="">
+        <article>
+            <a href="https://amzn.to/2YdSBPy"><img src="img/home-10.png" alt=""></a>
+            <span class="product">Womb Chair & Ottoman</span>
+            <span class="name">Kardiel</span>
+            <span class="price">$799.00</span>
         </article>
-        <article class="art3">
-            <img src="img/home-9.png" alt="">
-        </article>
-        <article class="art4">
-            <img src="" alt="">
-        </article>
-        <article class="art5">
-            <img src="" alt="">
-        </article>
-        <article class="art6">
-            <img src="" alt="">
+        <article>
+            <a href="https://amzn.to/2LCEfGP"><img src="img/home-9.png" alt=""></a>
+            <span class="product">Water Filter Glass Carafe</span>
+            <span class="name">Soma</span>
+            <span class="price">$30.00</span>
         </article>
     </section>
+    <footer>
+            <ul>
+                <li>The Design Shop</li>
+                <li>Carfully curated online design store,<span class="br"></span> founded and designed by <strong>Ruby Bacanovic</strong></li>
+            </ul>
+            <ul>
+                <li>Contact</li>
+                <li><a href="">Email Us</a></li>
+                <li><a href="">Work with us</a></li>
+            </ul>
+            <ul>
+                <li>Newsletter</li>
+                <li><a href="">Click here to <strong>subscribe.</strong></a></li>
+                <li><em>Don't woory. We hate spam too</em></li>
+            </ul>
+            <ul>
+                <li>Find Us Here</li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+            </ul>
+            <div class="copy">&copy; 2019 The Design Shop <span class="circ"></span> The Design Blog</div>
+        </footer>
+    </body>
+    </html>
 </body>
 </html>
